...
    var topics: [NSManagedObject] = [] //
    
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        title = "The List" //title on the navigation bar
        
        //register the UITableViewCell class with the table view.
        tableView.register(UITableViewCell.self,
                           forCellReuseIdentifier: "Cell")
        
        loadDatafromDatabase()
...

// MARK: - Add a new Topic
extension ViewController {
    // Implement the addName IBAction
     func addNewTopic() {
        
        let alert = UIAlertController(title: "New Topic",
                                      message: "Add a new topic",
                                      preferredStyle: .alert)
        
        let saveAction = UIAlertAction(title: "Save",
                                       style: .default) {
                                        [unowned self] action in
...
